src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Conventional Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Exchanged</fullName>
        </values>
        <values>
            <fullName>Instructed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Terms Out</fullName>
        </values>
        <values>
            <fullName>Viewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Meeting Rooms Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Serviced Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Licence Out</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Viewing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Virtual Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check Complete</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Meeting Booked</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Terms Agreed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent_Broker_Contact_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent/Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a contacts on the Agent/Broker account available.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Agent_Broker__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Agent/Broker Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent/Broker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select Agent/Broker Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agent/Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Agent/Broker)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Briefing_Statement__c</fullName>
        <description>Additional information to the property management team.</description>
        <inlineHelpText>Additional information to the property management team.</inlineHelpText>
        <label>Briefing Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Comments__c</fullName>
        <label>Closed Lost Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Space too big</fullName>
                </value>
                <value>
                    <fullName>Space too small</fullName>
                </value>
                <value>
                    <fullName>Unsuitable location</fullName>
                </value>
                <value>
                    <fullName>Feasibility study</fullName>
                </value>
                <value>
                    <fullName>Went to competitor</fullName>
                </value>
                <value>
                    <fullName>Requirement retracted</fullName>
                </value>
                <value>
                    <fullName>Lack of car parking</fullName>
                </value>
                <value>
                    <fullName>Unsuitable specification</fullName>
                </value>
                <value>
                    <fullName>See Closed Lost Comments</fullName>
                </value>
                <value>
                    <fullName>Inactivity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Notification__c</fullName>
        <label>Completion Notification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Check_Complete__c</fullName>
        <label>Compliance Check Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Check_Details__c</fullName>
        <label>Compliance Check Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts_Exchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Exchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covenant_Comments__c</fullName>
        <inlineHelpText>Details of Companies covenant strength or of any insolvency matters.</inlineHelpText>
        <label>Covenant Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Covenant_Indicator__c</fullName>
        <formula>IF( Covenant_Strength__c &gt; 70,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Covenant_Strength__c ) &amp; &quot; &quot; &amp;
TEXT( Covenant_Strength__c ) &amp; &quot;%&quot; &amp;
IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - ( Covenant_Strength__c )),
IF( Covenant_Strength__c  &gt;= 40,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, Covenant_Strength__c) &amp; &quot; &quot; &amp;
TEXT( Covenant_Strength__c) &amp; &quot;%&quot; &amp;
IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - ( Covenant_Strength__c )),
IF( Covenant_Strength__c &lt; 40,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Covenant_Strength__c ) &amp; &quot; &quot; &amp;
TEXT( Covenant_Strength__c) &amp; &quot;%&quot; &amp;
IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - ( Covenant_Strength__c )),
NULL)))</formula>
        <label>Covenant Strength</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covenant_Status__c</fullName>
        <label>Covenant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Raised</fullName>
                    <default>true</default>
                    <label>Not Raised</label>
                </value>
                <value>
                    <fullName>Raised</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covenant_Strength__c</fullName>
        <label>Covenant Strength %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Referral</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Customer Referral)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Voice_Referral__c</fullName>
        <label>Data/Voice Referral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Voice_Supplier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data/Voice Supplier Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Service__c</field>
                <operation>equals</operation>
                <value>Data/Voice</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Data/Voice Supplier Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Voice_Supplier__c</fullName>
        <formula>Data_Voice_Supplier_Contact__r.Account.Name</formula>
        <label>Data/Voice Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_since_last_customer_activity__c</fullName>
        <formula>MAX( TODAY() - IF( LastActivityDate &gt;=  DATEVALUE( LastModifiedDate ) ,  LastActivityDate , DATEVALUE( LastModifiedDate )), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last customer activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to indicate that the deposit has been paid by the customer</description>
        <inlineHelpText>Use this field to indicate that the deposit has been paid by the customer</inlineHelpText>
        <label>Deposit Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Referral1__c</fullName>
        <label>Employee Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Force_Status_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Status Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Referral__c</fullName>
        <label>Furniture Referral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Supplier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Furniture Supplier Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Service__c</field>
                <operation>equals</operation>
                <value>Furniture</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Furniture Supplier Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Furniture_Supplier__c</fullName>
        <formula>Furniture_Supplier_Contact__r.Account.Name</formula>
        <label>Furniture Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOTs_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HOTs Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOTs_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HOTs Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LA Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LT_Case_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LT Case Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_ID__c</fullName>
        <label>Last Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Viewing_ID__c</fullName>
        <label>Last Viewing ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_in_Wish_Date__c</fullName>
        <label>Move in Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Data_Voice_Referral_Reason__c</fullName>
        <label>No Data/Voice Referral Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already with supplier</fullName>
                </value>
                <value>
                    <fullName>Existing contract in place</fullName>
                </value>
                <value>
                    <fullName>No response from chasing</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Went to competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Furniture_Referral_Reason__c</fullName>
        <label>No Furniture Referral Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already with supplier</fullName>
                </value>
                <value>
                    <fullName>Existing contract in place</fullName>
                </value>
                <value>
                    <fullName>No response from chasing</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Went to competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Owner_Email__c</fullName>
        <label>Old Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opp_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_type_Conversion__c</fullName>
        <description>Hidden field for mapping recordtypes</description>
        <label>Opportunity Record type (Conversion)</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>CASE( TEXT(Region__c),
&quot;Manchester City Centre&quot;, &quot;Bruntwood&quot;,
&quot;Liverpool&quot;, &quot;Bruntwood&quot;,
&quot;Manchester Region&quot;, &quot;Bruntwood&quot;,
&quot;Birmingham&quot;, &quot;Bruntwood&quot;,
&quot;Leeds&quot;, &quot;Bruntwood&quot;,
&quot;Manchester Science Partnerships&quot;, &quot;MSP&quot;,
&quot;Salford Innovation Park&quot;, &quot;MSP&quot;,
&quot;Alderley Park&quot;, &quot;Alderley Park&quot;,
&quot;None&quot;)</formula>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Property__c</fullName>
        <inlineHelpText>Initial property of interest.</inlineHelpText>
        <label>Primary Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Quote_Accepted__c</fullName>
        <formula>ISPICKVAL(SBQQ__PrimaryQuote__r.SBQQ__Status__c, &apos;Accepted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_for_conversion__c</fullName>
        <label>Product ( for conversion)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Email__c</fullName>
        <formula>Referral_Contact__r.Email</formula>
        <label>Referral Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_First_Name__c</fullName>
        <formula>Referral_Contact__r.FirstName</formula>
        <label>Referral Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Mobile__c</fullName>
        <formula>Referral_Contact__r.MobilePhone</formula>
        <label>Referral Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Phone__c</fullName>
        <formula>Referral_Contact__r.Phone</formula>
        <label>Referral Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referral Contact)</relationshipLabel>
        <relationshipName>Referral_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Property__c</fullName>
        <formula>Referral_Inventory__r.Property__r.Name</formula>
        <label>Referral Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Size_sq_ft__c</fullName>
        <formula>Referral_Inventory__r.Size_sq_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Size sq ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size_sq_ft__c</fullName>
        <label>Size sq ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Source__c</fullName>
        <label>Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banking/Professional/Travel</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Betting/Gaming</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Exam Space</fullName>
                </value>
                <value>
                    <fullName>Filming</fullName>
                </value>
                <value>
                    <fullName>Full Virtual</fullName>
                </value>
                <value>
                    <fullName>Hair &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Fitness</fullName>
                </value>
                <value>
                    <fullName>Hot Food Takeaway</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Interviews</fullName>
                </value>
                <value>
                    <fullName>Mail Only</fullName>
                </value>
                <value>
                    <fullName>Mediation</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pop Up Food</fullName>
                </value>
                <value>
                    <fullName>Pop Up Retail</fullName>
                </value>
                <value>
                    <fullName>Restaurant/Cafe</fullName>
                </value>
                <value>
                    <fullName>Retail Shop</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Temporary Office Space</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_for_conversion__c</fullName>
        <label>Use ( for conversion)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Viewing Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtual_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Compliance_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Compliance Approval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstations__c</fullName>
        <label>Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>